--- a/feature/authorization/src/main/res/values/strings.xml
+++ b/feature/authorization/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="auth_extended_label">or login through this:</string>
 
     <string name="login_failed_label">Login failed</string>
+
+    <string name="unexisting_user_label">User doesn\'t exist</string>
+    <string name="wrong_password_label">Incorrect password for given user</string>
 </resources>
