--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">Postium</string>
-    <string name="title_dynamicfeature">Module Title</string>
 
-    <string name="home_tab">Home</string>
-    <string name="profile_tab">Profile</string>
+    <string name="home_tab">Главная</string>
+    <string name="profile_tab">Профиль</string>
 </resources>
