--- a/feature/authorization/src/main/res/values/strings.xml
+++ b/feature/authorization/src/main/res/values/strings.xml
@@ -1,23 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Postium</string>
-    <string name="login_hint">Login</string>
-    <string name="password_hint">Password</string>
-    <string name="password_confirmation_hint">Confirm password</string>
-    <string name="not_registered_label">Not registered yet? Press here.</string>
-    <string name="forgot_password_label">Forgot password?</string>
-    <string name="login_label">Log in</string>
+    <string name="login_hint">E-mail</string>
+    <string name="password_hint">Пароль</string>
+    <string name="password_confirmation_hint">Подтвердите пароль</string>
+    <string name="not_registered_label">Не зарегистрированы? Нажмите здесь.</string>
+    <string name="forgot_password_label">Забыли пароль?</string>
+    <string name="login_label">Войти</string>
 
-    <string name="toggle_visibility_content_description">Toggle password visibility</string>
-    <string name="auth_extended_label">or login through this:</string>
+    <string name="auth_extended_label">или зайдите при помощи:</string>
 
-    <string name="login_failed_label">Login failed</string>
+    <string name="login_failed_label">Не получилось войти</string>
 
-    <string name="unexisting_user_label">User doesn\'t exist</string>
-    <string name="wrong_password_label">Incorrect password for given user</string>
+    <string name="unexisting_user_label">Пользователь не существует</string>
+    <string name="wrong_password_label">Неправильный пароль</string>
 
     <!-- Registration screen -->
-    <string name="register">Register</string>
+    <string name="register">Зарегистрироваться</string>
 
     <string name="password_dont_match">Пароли не совпадают</string>
     <string name="weak_password">Введенный пароль слишком слабый</string>
