--- a/feature/postcreatepage/src/main/res/values/strings.xml
+++ b/feature/postcreatepage/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
 
     <string name="title_label">Название публикации</string>
     <string name="content_label">Содержимое публикации</string>
+
+    <string name="dialog_confirm">Выйти</string>
+    <string name="dialog_dismiss">Отмена</string>
+    <string name="dialog_title">Вы точно хотите выйти?</string>
+    <string name="dialog_text">Введенные вами данные нигде не сохранятся</string>
 </resources>
