--- a/feature/post_categories/src/main/res/values/strings.xml
+++ b/feature/post_categories/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="categories_title">Категории</string>
+
     <string name="categories_error">Не удалось загрузить категориии, попробуйте позже :(</string>
     <string name="categories_empty">Не найдено ни одной категории</string>
 
