--- a/feature/postcreatepage/src/main/res/values/strings.xml
+++ b/feature/postcreatepage/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
 <resources>
     <string name="editor_tab">Редактировать</string>
     <string name="preview_tab">Превью</string>
+    <string name="categories_tab">Категории</string>
 
     <string name="title_label">Название публикации</string>
     <string name="content_label">Содержимое публикации</string>
@@ -17,4 +18,7 @@
     <string name="title_cant_be_empty">Заголовок не может быть пустым</string>
     <string name="content_cant_be_empty">Содержимое не может быть пустым</string>
     <string name="something_went_wrong">Что-то пошло не так</string>
+
+    <string name="category_error">Не удалось загрузить категории</string>
+    <string name="category_empty">Категории не найдены</string>
 </resources>
