--- a/feature/postcreatepage/src/main/res/values/strings.xml
+++ b/feature/postcreatepage/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="editor_tab">Редактировать</string>
+    <string name="editor_tab">Править</string>
     <string name="preview_tab">Превью</string>
     <string name="categories_tab">Категории</string>
 
