add navigation to playlists as bottom tab

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="home_tab">Главная</string>
     <string name="profile_tab">Профиль</string>
     <string name="category_tab">Категории</string>
+    <string name="playlists_tab">Списки для чтения</string>
 </resources>
