--- a/feature/userpage/src/main/res/values/strings.xml
+++ b/feature/userpage/src/main/res/values/strings.xml
@@ -2,10 +2,13 @@
 <resources>
     <string name="posts">Публикации</string>
     <string name="bookmarks">Закладки</string>
+    <string name="playlists">Списки для чтения</string>
 
     <string name="posts_error">Не удалось загрузить публикации пользователя</string>
     <string name="bookmarks_error">Не удалось загрузить закладки пользователя</string>
+    <string name="playlists_error">Не удалось загрузить списки чтения пользователя</string>
 
     <string name="posts_empty">Пользователь не выложил ни одной публикации</string>
     <string name="bookmarks_empty">Пользователь не добавил в закладки ни одной публикации</string>
+    <string name="playlists_empty">Пользователь не создал ни одного списка для чтения</string>
 </resources>
